--- a/config/portal/mall-portal-prod.yaml
+++ b/config/portal/mall-portal-prod.yaml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:mysql://db:3306/mall?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai
+    url: jdbc:mysql://192.168.1.111:3306/mall?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai
     username: root
     password: root
   data:
@@ -9,12 +9,12 @@ spring:
       port: 27017
       database: mall-port
   redis:
-    host: redis # Redis服务器地址
+    host: 192.168.1.111 # Redis服务器地址
     database: 0 # Redis数据库索引（默认为0）
     port: 6379 # Redis服务器连接端口
     password: #不设置密码
   rabbitmq:
-    host: rabbit
+    host: 192.168.1.111
     port: 5672
     virtual-host: /mall
     username: mall
