--- a/config/search/mall-search-prod.yaml
+++ b/config/search/mall-search-prod.yaml
@@ -1,11 +1,11 @@
 spring:
   datasource:
-    url: jdbc:mysql://db:3306/mall?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai
-    username: reader
-    password: 123456
+    url: jdbc:mysql://192.168.1.111:3306/mall?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai
+    username: root
+    password: root
   elasticsearch:
     rest:
-      uris: http://es:9200
+      uris: http://192.168.1.111:9200
 management:
   health:
     elasticsearch:
