--- a/mall-admin/src/main/resources/application.yml
+++ b/mall-admin/src/main/resources/application.yml
@@ -2,7 +2,7 @@ server:
   port: 8080
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/mall?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai
+    url: jdbc:mysql://192.168.1.111:3306/mall?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai
     username: root
     password: root
     druid:
@@ -15,13 +15,13 @@ spring:
         login-username: druid
         login-password: druid
   redis:
-    host: localhost # Redis服务器地址
+    host: 192.168.1.111 # Redis服务器地址
     database: 0 # Redis数据库索引（默认为0）
     port: 6379 # Redis服务器连接端口
     password:  # Redis服务器连接密码（默认为空）
     timeout: 3000ms # 连接超时时间（毫秒）
   rabbitmq: #rabbitmq相关配置
-    host: localhost
+    host: 192.168.1.111
     port: 5672
     username: guest
     password: guest
@@ -42,7 +42,7 @@ management: #开启SpringBoot Admin的监控
     health:
       show-details: always
 redis:
-  database: mall
+  database: 192.168.1.111
   key:
     admin: 'ums:admin'
   expire:
@@ -68,5 +68,5 @@ feign:
   okhttp:
     enabled: true
 ribbon:
-  ConnectTimeout: 3000 #服务请求连接超时时间（毫秒）
-  ReadTimeout: 3000 #服务请求处理超时时间（毫秒）
+  ConnectTimeout: 60000 #服务请求连接超时时间（毫秒）
+  ReadTimeout: 60000 #服务请求处理超时时间（毫秒）
