--- a/mall-portal/src/main/resources/application.yml
+++ b/mall-portal/src/main/resources/application.yml
@@ -2,7 +2,7 @@ server:
   port: 8085
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/mall?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai
+    url: jdbc:mysql://192.168.1.111:3306/mall?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai
     username: root
     password: root
     druid:
@@ -16,17 +16,17 @@ spring:
         login-password: druid
   data:
     mongodb:
-      host: localhost
+      host: 192.168.1.111
       port: 27017
       database: mall-port
   redis:
-    host: localhost # Redis服务器地址
+    host: 192.168.1.111 # Redis服务器地址
     database: 0 # Redis数据库索引（默认为0）
     port: 6379 # Redis服务器连接端口
     password:  # Redis服务器连接密码（默认为空）
     timeout: 3000ms # 连接超时时间（毫秒）
   rabbitmq:
-    host: localhost
+    host: 192.168.1.111
     port: 5672
     virtual-host: /mall
     username: mall
@@ -52,7 +52,7 @@ redis:
     orderId: 'oms:orderId'
     member: 'ums:member'
   expire:
-    authCode: 90 # 验证码超期时间
+    authCode: 90 # 验证码超期时间 && token过期时间
     common: 86400 # 24小时
 
 # 消息队列定义
@@ -64,5 +64,5 @@ feign:
   okhttp:
     enabled: true
 ribbon:
-  ConnectTimeout: 3000 #服务请求连接超时时间（毫秒）
-  ReadTimeout: 3000 #服务请求处理超时时间（毫秒）
+  ConnectTimeout: 60000 #服务请求连接超时时间（毫秒）
+  ReadTimeout: 60000 #服务请求处理超时时间（毫秒）
