--- a/document/docker/docker-compose-env.yml
+++ b/document/docker/docker-compose-env.yml
@@ -25,7 +25,7 @@ services:
     image: nginx:1.10
     container_name: nginx
     volumes:
-      - /mydata/nginx/conf:/etc/nginx #配置文件挂载
+      - /mydata/nginx/nginx.conf:/etc/nginx/nginx.conf #配置文件挂载
       - /mydata/nginx/html:/usr/share/nginx/html #静态资源根目录挂载
       - /mydata/nginx/log:/var/log/nginx #日志文件挂载
     ports:
@@ -42,7 +42,6 @@ services:
   elasticsearch:
     image: elasticsearch:7.6.2
     container_name: elasticsearch
-    user: root
     environment:
       - "cluster.name=elasticsearch" #设置集群名称为elasticsearch
       - "discovery.type=single-node" #以单一节点模式启动
