--- a/mall-admin/src/main/resources/application.yml
+++ b/mall-admin/src/main/resources/application.yml
@@ -2,7 +2,7 @@ server:
   port: 8080
 spring:
   datasource:
-    url: jdbc:mysql://192.168.1.111:3306/mall?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai
+    url: jdbc:mysql://192.168.1.238:3306/mall?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai
     username: root
     password: root
     druid:
@@ -15,13 +15,13 @@ spring:
         login-username: druid
         login-password: druid
   redis:
-    host: 192.168.1.111 # Redis服务器地址
+    host: 192.168.1.238 # Redis服务器地址
     database: 0 # Redis数据库索引（默认为0）
     port: 6379 # Redis服务器连接端口
     password:  # Redis服务器连接密码（默认为空）
     timeout: 3000ms # 连接超时时间（毫秒）
   rabbitmq: #rabbitmq相关配置
-    host: 192.168.1.111
+    host: 192.168.1.238
     port: 5672
     username: guest
     password: guest
@@ -41,8 +41,19 @@ management: #开启SpringBoot Admin的监控
   endpoint:
     health:
       show-details: always
+  metrics:
+    distribution:
+      percentiles-histogram:
+        http:
+          server:
+            requests: true
+        recommend:
+          timer:
+            recall: true
+            profile: true
+            predict: true
 redis:
-  database: 192.168.1.111
+  database: 192.168.1.238
   key:
     admin: 'ums:admin'
   expire:
