--- a/mall-auth/src/main/resources/application.yml
+++ b/mall-auth/src/main/resources/application.yml
@@ -5,6 +5,17 @@ management:
     web:
       exposure:
         include: "*"
+  metrics:
+    distribution:
+      percentiles-histogram:
+        http:
+          server:
+            requests: true
+        recommend:
+          timer:
+            recall: true
+            profile: true
+            predict: true
 feign:
   okhttp:
     enabled: true
