--- a/mall-portal/src/main/resources/application.yml
+++ b/mall-portal/src/main/resources/application.yml
@@ -2,7 +2,7 @@ server:
   port: 8085
 spring:
   datasource:
-    url: jdbc:mysql://192.168.1.111:3306/mall?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai
+    url: jdbc:mysql://192.168.1.238:3306/mall?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai
     username: root
     password: root
     druid:
@@ -16,17 +16,17 @@ spring:
         login-password: druid
   data:
     mongodb:
-      host: 192.168.1.111
+      host: 192.168.1.238
       port: 27017
       database: mall-port
   redis:
-    host: 192.168.1.111 # Redis服务器地址
+    host: 192.168.1.238 # Redis服务器地址
     database: 0 # Redis数据库索引（默认为0）
     port: 6379 # Redis服务器连接端口
     password:  # Redis服务器连接密码（默认为空）
     timeout: 3000ms # 连接超时时间（毫秒）
   rabbitmq:
-    host: 192.168.1.111
+    host: 192.168.1.238
     port: 5672
     virtual-host: /mall
     username: mall
@@ -43,7 +43,17 @@ management: #开启SpringBoot Admin的监控
   endpoint:
     health:
       show-details: always
-
+  metrics:
+    distribution:
+      percentiles-histogram:
+        http:
+          server:
+            requests: true
+        recommend:
+          timer:
+            recall: true
+            profile: true
+            predict: true
 # 自定义redis key
 redis:
   database: mall
