--- a/mall-search/src/main/resources/application.yml
+++ b/mall-search/src/main/resources/application.yml
@@ -2,7 +2,7 @@ server:
   port: 8081
 spring:
   datasource:
-    url: jdbc:mysql://192.168.1.111:3306/mall?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai
+    url: jdbc:mysql://192.168.1.238:3306/mall?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai
     username: root
     password: root
     druid:
@@ -20,7 +20,7 @@ spring:
         enabled: true
   elasticsearch:
     rest:
-      uris: 192.168.1.111:9200
+      uris: 192.168.1.238:9200
 mybatis:
   mapper-locations:
     - classpath:dao/*.xml
@@ -33,6 +33,17 @@ management: #开启SpringBoot Admin的监控
   endpoint:
     health:
       show-details: always
+  metrics:
+    distribution:
+      percentiles-histogram:
+        http:
+          server:
+            requests: true
+        recommend:
+          timer:
+            recall: true
+            profile: true
+            predict: true
 
 
 
